# KathBot

./: README.md  main.py  pyproject.toml
jsons/: puns.json
