[tool.poetry]
name = "kathbot"
version = "0.1.0"
description = "Discord bot created for my girlfriend's birthday"
authors = ["Joey Powers jjpowers@purdue.edu"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
